--- a/pyproject.toml
+++ b/pyproject.toml
@@ -206,3 +206,6 @@ rss_feed = ["feedparser", "listparser", "newspaper3k"]
 [tool.poetry.group.docs.dependencies]
 
 [tool.poetry.scripts]
+
+[tool.setuptools]
+py-modules = ["embedchain"]
